--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: StorageSign
 main: wacky.storagesign.StorageSignCore
-version: 1.1.8
+version: 1.1.9
 author: wackyls6
 softdepend: [WorldGuard]
 website: http://forum.minecraftuser.jp/viewtopic.php?t=15065
@@ -13,6 +13,7 @@ permissions:
                 storagesign.place: true
                 storagesign.break: true
                 storagesign.create: true
+                storagesign.autocollect: true
     storagesign.use:
         description: Allows you to use a storagesign
         default: true
@@ -28,3 +29,6 @@ permissions:
     storagesign.create:
         description: Allows you to create a storagesign
         default: op
+    storagesign.autocollect:
+        description: Collect items you picked
+        default: true
