--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,8 @@
 name: StorageSign
 main: wacky.storagesign.StorageSignCore
-version: 1.2.7
+version: 1.2.8
 author: wackyls6
+api-version: 1.15
 softdepend: [WorldGuard]
 website: http://forum.minecraftuser.jp/viewtopic.php?t=15065
 permissions:
