--- a/plugin.yml
+++ b/plugin.yml
@@ -2,9 +2,9 @@ name: StorageSign
 main: wacky.storagesign.StorageSignCore
 version: 1.2.8
 author: wackyls6
-api-version: 1.15
+api-version: 1.14
 softdepend: [WorldGuard]
-website: http://forum.minecraftuser.jp/viewtopic.php?t=15065
+website: https://github.com/wackyls6/StorageSign
 permissions:
     storagesign.*:
         description:
