--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: StorageSign
 main: wacky.storagesign.StorageSignCore
-version: 1.2.8d
+version: 1.2.9alpha
 author: wackyls6
-api-version: 1.14
+api-version: 1.16
 softdepend: [WorldGuard]
 website: https://github.com/wackyls6/StorageSign
 permissions:
