--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: StorageSign
 main: wacky.storagesign.StorageSignCore
-version: 1.2.9alpha
+version: 1.3.0
 author: wackyls6
 api-version: 1.16
 softdepend: [WorldGuard]
